--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -10,6 +10,72 @@
     background-color: purple;
 }
 
+
+
+/* Large and Extra Large Screen styles=== */
+  /* @media (min-width: 1024px) { */
+    .loginWrapper {
+        display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    }
+    .memLoginHeader {
+        font-size: 26px;
+        letter-spacing: 1px;
+        text-align: center;
+        padding-top: 20px;
+        font-weight: 800;
+    }
+    .loginScreen {
+        background: white;
+        /* height: 65%; */
+        width: 50%;
+        /* display: flex; */
+        /* align-items: center; */
+        border-radius: 6px;
+        /* justify-content: space-around; */
+    }
+    .inputBox {
+        height: 53px;
+        margin: 15px;
+        width: 280px;
+        border-radius: 50px;
+        outline: none;
+        background: lightgray;
+        opacity: 0.7;
+        border: 0;
+        padding: 0;
+        text-align: left;
+        padding-left: 25px;
+    }
+    .linkAccount {
+        margin-top: 25px;
+        text-align: center;
+    }
+    input.inputBox::placeholder {
+        color: black;
+        padding-left: 20px;
+      }
+      .logoPanel {
+          background-image: url('../../assets/loginLogo.jpeg');
+          height: 250px;
+          width: 250px;
+          background-size: contain;
+          border-radius: 6px;
+      }
+      .forgotPassword {
+        font-size: 12px;
+        text-align: center;
+      }
+      .loginContainer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding: 20px 0 30px;
+      }
+/* } */
+
 /* Mobile Styles===== */
 @media (max-width: 768px) {
     .loginWrapper {
@@ -18,50 +84,19 @@
         width: 1200px; */
     }
     .loginScreen {
-        background: lightblue;
-        height: 50%;
-        width: 50%;
+        background: white;
+        height: 77%;
+        width: 80%;
         margin: 30px;
         display: flex;
         align-items: center;
+        flex-direction: column;
         justify-content: flex-end;
         border-radius: 6px;
+    }
+    .logoPanel {
+        height: 50%;
+        width: 50%;
+        background-size: cover;
     }
   }
-
-/* Large and Extra Large Screen styles=== */
-  @media (min-width: 1024px) {
-    .loginWrapper {
-        display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    }
-    .loginScreen {
-        background: wheat;
-        height: 65%;
-        width: 50%;
-        display: flex;
-        align-items: center;
-        border-radius: 6px;
-        justify-content: flex-end;
-    }
-    .inputBox {
-        height: 35px;
-        margin: 15px;
-        width: 285px;
-        border-radius: 50px;
-        outline: none;
-        background: lightgray;
-        opacity: 0.7;
-        border: 0;
-        padding: 0;
-    }
-    input.inputBox::placeholder {
-        color: black;
-        padding-left: 20px;
-      }
-      .logoPanel {
-          background: '';
-      }
-}
