--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -5,6 +5,11 @@
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 1px;
+    text-align: center;
+    padding-left: 0;
+}
+.loginButton.inputBox:hover {
+    background-color: mediumseagreen;
 }
 .loginWrapper {
     background-color: purple;
