--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -14,6 +14,15 @@
 .headerContainer {
     position: relative;
 }
+.thumbnail {
+    border-radius: 5px;
+}
+.moviesList {
+    padding: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 .movieHeader {
     background-color: maroon;
     /* height: 180px; */
@@ -25,3 +34,27 @@
     letter-spacing: 2px;
 
 }
+.imageContainer:hover {
+    transform: scale(1.1);
+    transition: transform 1s;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.7);
+}
+.imageContainer{
+    transform: scale(1);
+    transition: transform 1s;
+    position: relative;
+}
+.infoContainer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 10px;
+    color: wheat;
+    background: rgba(0,0,0,0.4);
+    box-shadow: 0 0 7px rgba(0,0,0,0.7);
+}
+
+
+
+
+
